alterando o id para Long e trocando foreach por stream